pdes/jitfailure-dolfin_expression_9871cbf5a57289d18218fe915c2badec/error.log
/tmp/tmpmsjoqdi_/dolfin_expression_9871cbf5a57289d18218fe915c2badec.cpp: In member function ‘virtual void dolfin::dolfin_expression_9871cbf5a57289d18218fe915c2badec::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpmsjoqdi_/dolfin_expression_9871cbf5a57289d18218fe915c2badec.cpp:63:76: error: expected ‘;’ before ‘)’ token
           values[0] = 4*exp(-pow(beta, 2)*pow(x[0], 2) + pow(x[1] - R0, 2)));
                                                                            ^
                                                                            ;
/tmp/tmpmsjoqdi_/dolfin_expression_9871cbf5a57289d18218fe915c2badec.cpp: In member function ‘virtual double dolfin::dolfin_expression_9871cbf5a57289d18218fe915c2badec::get_property(std::__cxx11::string) const’:
/tmp/tmpmsjoqdi_/dolfin_expression_9871cbf5a57289d18218fe915c2badec.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "beta") return beta;          if (name == "R0") return R0;
           ^~
/tmp/tmpmsjoqdi_/dolfin_expression_9871cbf5a57289d18218fe915c2badec.cpp:75:53: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "beta") return beta;          if (name == "R0") return R0;
                                                     ^~
